--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  http:
+  dartz:
 
 
   # The following adds the Cupertino Icons font to your application.
