--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,10 @@ dependencies:
   
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
-  http:
-  dartz:
-  injectable:  
-  get_it: 
+  http: ^1.1.0
+  dartz: ^0.10.1
+  injectable: ^2.3.2
+  get_it: ^7.6.4
 
 
   # The following adds the Cupertino Icons font to your application.
