--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dartz: ^0.10.1
   injectable: ^2.3.2
   get_it: ^7.6.4
+  logging: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
